# rest-api-lab6

./: .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml  run.py
app/: __init__.py
app/models/: book.py
app/resources/: book.py
app/schemas/: book.py
